Fix broken tests

--- a/Builder.Template/Builder.Template.csproj
+++ b/Builder.Template/Builder.Template.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Content Include="Template\ClassLibrary.xml">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
