--- a/Builder.ConsoleApp/App.config
+++ b/Builder.ConsoleApp/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+        <section name="unity" 
+         type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, 
+               Microsoft.Practices.Unity.Configuration"/>
+    </configSections>
+  
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <typeAliases>
+      <typeAlias alias="aliasIbuilder" type="Builder.Template.Interface.IBuilder, Builder.Template.Interface" />
+      <typeAlias alias="aliasCsharp" type="Builder.Template.CSharp.Builder, Builder.Template.CSharp" />
+      <typeAlias alias="aliasJava" type="Builder.Template.CSharp.Builder, Builder.Template.CSharp" />
+    </typeAliases>
+    <container>
+      <register type="aliasIbuilder" mapTo="aliasCsharp" name="csharp"/>
+      <register type="aliasIbuilder" mapTo="aliasJava" name="java"/>
+    </container>
+  </unity>
+  
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
