Ajustando app.config, renomeando classe Builder para BuilderCSharp, adicionando unity no console para testar se a build volta a funcionar

--- a/Builder.ConsoleApp/App.config
+++ b/Builder.ConsoleApp/App.config
@@ -9,12 +9,10 @@
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <typeAliases>
       <typeAlias alias="aliasIbuilder" type="Builder.Template.Interface.IBuilder, Builder.Template.Interface" />
-      <typeAlias alias="aliasCsharp" type="Builder.Template.CSharp.Builder, Builder.Template.CSharp" />
-      <typeAlias alias="aliasJava" type="Builder.Template.CSharp.Builder, Builder.Template.CSharp" />
     </typeAliases>
     <container>
-      <register type="aliasIbuilder" mapTo="aliasCsharp" name="csharp"/>
-      <register type="aliasIbuilder" mapTo="aliasJava" name="java"/>
+      <register type="aliasIbuilder" mapTo="Builder.Template.CSharp.BuilderCSharp, Builder.Template.CSharp" name="csharp"/>
+      <register type="aliasIbuilder" mapTo="Builder.Template.CSharp.BuilderCSharp, Builder.Template.CSharp" name="java"/>
     </container>
   </unity>
   
