--- a/Builder.Template.CSharp/Builder.Template.CSharp.csproj
+++ b/Builder.Template.CSharp/Builder.Template.CSharp.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder.cs" />
+    <Compile Include="BuilderCSharp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Template\AssemblyInfoTemplate.cs">
       <DependentUpon>AssemblyInfoTemplate.tt</DependentUpon>
