Adicionando mecaniscmo de parse de projetos e referencias por expressão matematica e criação dos arquivos de projetos já relacionados com a sln

--- a/Builder.ApplicationService/Builder.ApplicationService.csproj
+++ b/Builder.ApplicationService/Builder.ApplicationService.csproj
@@ -33,6 +33,10 @@
     <Reference Include="CommandLine">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="NCalc, Version=1.3.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\NCalc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,8 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuilderService.cs" />
-    <Compile Include="ConsoleApp\BuilderOptions.cs" />
-    <Compile Include="ConsoleApp\BuilderCommandParser.cs" />
+    <Compile Include="Command\CommandParams.cs" />
+    <Compile Include="Command\CommandRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,9 +60,9 @@
       <Project>{0235f1d9-6904-46f1-8798-92ffbf8b0a35}</Project>
       <Name>Builder.Dispatcher</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Builder.Template.Interface\Builder.Template.Interface.csproj">
+    <ProjectReference Include="..\Builder.Template\Builder.Template.csproj">
       <Project>{53f70169-ecda-4328-be9f-baae821fb12e}</Project>
-      <Name>Builder.Template.Interface</Name>
+      <Name>Builder.Template</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
