--- a/Builder.Unit/App.config
+++ b/Builder.Unit/App.config
@@ -8,7 +8,7 @@
 
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <typeAliases>
-      <typeAlias alias="aliasIbuilder" type="Builder.Template.Interface.IBuilder, Builder.Template.Interface" />
+      <typeAlias alias="aliasIbuilder" type="Builder.Template.IBuilder, Builder.Template" />
     </typeAliases>
     <container>
       <register type="aliasIbuilder" mapTo="Builder.Template.CSharp.BuilderCSharp, Builder.Template.CSharp" name="csharp"/>
