--- a/Builder.ConsoleApp/Builder.ConsoleApp.csproj
+++ b/Builder.ConsoleApp/Builder.ConsoleApp.csproj
@@ -64,13 +64,21 @@
       <Project>{a21db1ad-5276-4c1d-acb3-e9c72151a28b}</Project>
       <Name>Builder.ApplicationService</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Builder.Core\Builder.Core.csproj">
+      <Project>{f5dc5e41-0ae6-4811-8105-4a48a1dd2c0d}</Project>
+      <Name>Builder.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Builder.Dispatcher\Builder.Dispatcher.csproj">
+      <Project>{0235f1d9-6904-46f1-8798-92ffbf8b0a35}</Project>
+      <Name>Builder.Dispatcher</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Builder.Template.CSharp\Builder.Template.CSharp.csproj">
       <Project>{552ccb8d-da2f-4c0a-8ad5-2277dddb9dcc}</Project>
       <Name>Builder.Template.CSharp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Builder.Template.Interface\Builder.Template.Interface.csproj">
+    <ProjectReference Include="..\Builder.Template\Builder.Template.csproj">
       <Project>{53f70169-ecda-4328-be9f-baae821fb12e}</Project>
-      <Name>Builder.Template.Interface</Name>
+      <Name>Builder.Template</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
