--- a/Builder.Template.CSharp/Builder.Template.CSharp.csproj
+++ b/Builder.Template.CSharp/Builder.Template.CSharp.csproj
@@ -41,34 +41,47 @@
   <ItemGroup>
     <Compile Include="BuilderCSharp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Template\SolutionTemplate.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SolutionTemplate.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Template\XmlCsProjTemplate.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>XmlCsProjTemplate.tt</DependentUpon>
+    </Compile>
     <Compile Include="Template\AssemblyInfoTemplate.cs">
       <DependentUpon>AssemblyInfoTemplate.tt</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Template\XmlCsProjTemplate.cs">
-      <DependentUpon>XmlCsProjTemplate.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Template\AssemblyInfoTemplate.tt">
+    <None Include="Template\SolutionTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>AssemblyInfoTemplate.cs</LastGenOutput>
+      <LastGenOutput>SolutionTemplate.cs</LastGenOutput>
     </None>
     <None Include="Template\XmlCsProjTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>XmlCsProjTemplate.cs</LastGenOutput>
+    </None>
+    <None Include="Template\AssemblyInfoTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>AssemblyInfoTemplate.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Builder.Template.Interface\Builder.Template.Interface.csproj">
+    <ProjectReference Include="..\Builder.Dispatcher\Builder.Dispatcher.csproj">
+      <Project>{0235f1d9-6904-46f1-8798-92ffbf8b0a35}</Project>
+      <Name>Builder.Dispatcher</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Builder.Template\Builder.Template.csproj">
       <Project>{53f70169-ecda-4328-be9f-baae821fb12e}</Project>
-      <Name>Builder.Template.Interface</Name>
+      <Name>Builder.Template</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
