--- a/Builder.Dispatcher/Builder.Dispatcher.csproj
+++ b/Builder.Dispatcher/Builder.Dispatcher.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Build" />
     <Reference Include="NCalc">
       <HintPath>..\lib\NCalc.dll</HintPath>
     </Reference>
@@ -42,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProjectCollection.cs" />
     <Compile Include="ComplexParam.cs" />
-    <Compile Include="ExpressionFactory.cs" />
+    <Compile Include="ProjectLoader.cs" />
+    <Compile Include="Hierarchy.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="Folder.cs" />
     <Compile Include="File.cs" />
+    <Compile Include="PathHelper.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
