--- a/Builder.Unit/Builder.Unit.csproj
+++ b/Builder.Unit/Builder.Unit.csproj
@@ -46,6 +46,8 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.QualityTools.ExecutionCommon, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -61,11 +63,19 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ConsoleApp\TestApplicationCommands.cs" />
+    <Compile Include="Expressions\TestExpressionReader.cs" />
+    <Compile Include="ConsoleApp\TestProjectCommands.cs" />
+    <Compile Include="ConsoleApp\TestBasicCommands.cs" />
     <Compile Include="BuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\juniorgasparotto\NCalc\Evaluant.Calculator\NCalc.csproj">
+      <Project>{5f014003-50d8-49e0-8afe-91d38dccc97c}</Project>
+      <Name>NCalc</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Builder.ApplicationService\Builder.ApplicationService.csproj">
       <Project>{a21db1ad-5276-4c1d-acb3-e9c72151a28b}</Project>
       <Name>Builder.ApplicationService</Name>
@@ -86,6 +96,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
